feat(ioc): вызывать методы с аннотацией @Configuration после создания всех объектов, а не сразу после создания одного